tests/ui/missing_scale.stderr
error: <scale> arg expected.

  = help: Use `#[unit(<ident>, "<symbol>", <si_prefix>, <scale>)]`
or  `#[unit(<ident>, "<symbol>", <scale>)]`.

  --> tests/ui/missing_scale.rs:16:1
   |
16 | #[unit(C, "c")]
   | ^^^^^^^^^^^^^^^
